Fix SurfaceAggregator's tracking of damaged surfaces

This CL allows SurfaceAggregator to track damage in all possible cases
of child_surface. This is done by storing the whole surface range instead
of just LocalSurfaceIds

Bug: 874249
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ie2886ae6eda753ab8bb3bb8b168f3a7c507df187
Reviewed-on: https://chromium-review.googlesource.com/1174984
Commit-Queue: Andre Kaba <akaba@google.com>
Reviewed-by: Saman Sami <samans@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583915}
Former-commit-id: b1ccce75d5593ae84431c4c8f923f413acafb451